--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -14,3 +14,7 @@
 <li><a href="https://groups.google.com/group/qubes-devel/msg/28ecafd3c73ec1b0">​Qubes Security Bulletin #4</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/add1e480d8642755">​Qubes Security Bulletin #5</a></li>
 </ul>
+<h2 id="a2013">2013</h2>
+<ul>
+<li><a href="https://groups.google.com/group/qubes-devel/msg/9e2fb148f140e09a">​Qubes Security Bulletin #6</a></li>
+</ul>
