--- a/SecurityPage.html
+++ b/SecurityPage.html
@@ -7,7 +7,7 @@
 <pre class="wiki"><code>security at qubes-os dot org</code></pre>
 <h2 id="QubesSecurityTeamGPGKey">Qubes Security Team GPG Key</h2>
 <p>Please use the <a href="http://keys.qubes-os.org/keys/qubes-os-security-team-key.asc">​this GPG key</a> for encrypting any emails send to this address. Like all the GPG keys used by the Qubes project, this key is signed with the Qubes Master key. Please see <a href="/wiki/wiki/VerifyingSignatures">this page</a> for more information on how to verify the keys.</p>
-<h2 id="MemberoftheSecurityTeam">Member of the Security Team</h2>
+<h2 id="MembersoftheSecurityTeam">Members of the Security Team</h2>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab dot com&gt;</li>
 <li>Marek Marczykowski &lt;marmarek at invisiblethingslab dot com&gt;</li>
