--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -20,5 +20,5 @@
 </ul>
 <h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
 <ul>
-<li>Alexander Tereshkin <code>alex.tereshkin at gmail.com</code> - core windows (Qubes Windows Tools)</li>
+<li>Alexander Tereshkin <code>alex at invisiblethingslab dot com</code> - core windows (Qubes Windows Tools)</li>
 </ul>
