--- a/HCL.html
+++ b/HCL.html
@@ -98,6 +98,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/FyA7_Kzw1WA/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/F-jVh62ANak/s57rqUWTY7kJ">Alex​</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
