VmTools/QvmRun changed
New repo URL

--- a/VmTools/QvmRun.html
+++ b/VmTools/QvmRun.html
@@ -1,1 +1,1 @@
-<p><a href="/wiki/wiki/VmTools/Include(http%3A/git.qubes-os.org?p=mainstream/docs.git;a=blob_plain;f=vm-tools/qvm-run.rst;hb=master,%20text/x-rst)">Include(http://git.qubes-os.org/?p=mainstream/docs.git;a=blob_plain;f=vm-tools/qvm-run.rst;hb=master, text/x-rst)?</a></p>
+<p><a href="/wiki/wiki/VmTools/Include(http%3A/git.qubes-os.org?p=marmarek/core-agent-linux.git;a=blob_plain;f=doc/vm-tools/qvm-run.rst;hb=master,%20text/x-rst)">Include(http://git.qubes-os.org/?p=marmarek/core-agent-linux.git;a=blob_plain;f=doc/vm-tools/qvm-run.rst;hb=master, text/x-rst)?</a></p>
