--- a/BuildingArchlinuxTemplate.html
+++ b/BuildingArchlinuxTemplate.html
@@ -21,6 +21,9 @@ make gui-agent-linux-vm</code></pre>
 <p>You can now find your template in qubes-src/linux-template-builder/rpm/noarch. Install it in dom0 (just take care as it will replace your current archlinux-x64 template)</p>
 <hr />
 <h1 id="KnownproblemsduringbuildingorwhenrunningtheVM">Known problems during building or when running the VM</h1>
+<h2 id="Cantopenfilearchlinux-2013.02.01-dual.iso">Can't open file archlinux-2013.02.01-dual.iso</h2>
+<p>Archlinux ISO files are sometimes removed from mirrors. Check the last version available on the archlinux mirror (eg: <a href="http://mir.archlinux.fr/iso/">​http://mir.archlinux.fr/iso/</a>), and update qubes-src/linux-template-builder/scripts_archlinux/00_prepare.sh accordingly:</p>
+<pre class="wiki"><code>ISO_VERSION=2013.06.01</code></pre>
 <h2 id="xen-vmm-vmfailtobuildwithaPARSETUPLErelatederror:">xen-vmm-vm fail to build with a PARSETUPLE related error:</h2>
 <p>Commenting out &quot;#define HAVE_ATTRIBUTE_FORMAT_PARSETUPLE&quot; from chroot_archlinux/usr/include/python2.7/pyconfig.h fixes the problem, but it isn't the right solution [1]...</p>
 <p>A better fix is planned for the next python release (the bug is considered release blocking), and will be updated in archlinux chroot as soon as available.</p>
