--- a/HCL.html
+++ b/HCL.html
@@ -76,6 +76,14 @@
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
+<p>Apple MacBookPro<br /> (Intel HD Graphics, Ivy Bridge, i5-3210M)</p>
+<p>?</p>
+<p>?</p>
+<p>X</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/ZbjrseLxuPQ/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/ZbjrseLxuPQ/5Jx5DvpnwMMJ">​ph145h</a></p>
 <p>ASUS UX-31</p>
 <p>*</p>
 <p>?</p>
