--- a/HCL.html
+++ b/HCL.html
@@ -97,6 +97,12 @@
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
+<p>Dell Latitude E4300 <br /> (Intel GMA 4500M; Mobile 4 Series Chipset; Core2 Duo P9600)</p>
+<p>X</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/LNJqSbH0cOQ/VC9EwEDrXMQJ">​Pablo Costa</a></p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
