--- a/HCL.html
+++ b/HCL.html
@@ -241,8 +241,10 @@
 <p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
 <h2 id="Submittingnewresults">Submitting new results</h2>
-<p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
+<p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results ('HCL Info' - contets of the .txt file) to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
 <ul>
 <li>Subject: HCL - &lt;your machine model name&gt;</li>
 </ul>
 <p>And of course include any useful information about the mentioned Qubes features.</p>
+<p>If you have problems with your hardware, please send the 'HCL Support Files' as well (the .cpio.gz file)</p>
+<p><strong>Note:</strong> The HCL Support Files may contains many details about your hardware - including serial numbers.</p>
