--- a/HCL.html
+++ b/HCL.html
@@ -247,4 +247,4 @@
 </ul>
 <p>And of course include any useful information about the mentioned Qubes features.</p>
 <p>If you have problems with your hardware, please send the 'HCL Support Files' as well (the .cpio.gz file)</p>
-<p><strong>Note:</strong> The HCL Support Files may contains many details about your hardware - including serial numbers.</p>
+<p><strong>Note:</strong> The 'HCL Support Files' are contains many details about your hardware - including serial numbers.</p>
