--- a/HCL.html
+++ b/HCL.html
@@ -241,7 +241,7 @@
 <p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
 <h2 id="Submittingnewresults">Submitting new results</h2>
-<p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results ('HCL Info' - contets of the .txt file) to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
+<p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results ('HCL Info' - contets of the .txt file) to <a href="/wiki/wiki/QubesLists">the mailing list</a> with the following details included:</p>
 <ul>
 <li>Subject: HCL - &lt;your machine model name&gt;</li>
 </ul>
