--- a/ContributingHowto.html
+++ b/ContributingHowto.html
@@ -2,7 +2,7 @@
 <p>Ok, so you think Qubes Project is cool and you would like to contribute? You are very welcome!</p>
 <p>First you should decide what you are interested in (and good in). The Qubes project would welcome contributions in various areas:</p>
 <ul>
-<li>Testing and bug reporting</li>
+<li><a href="/wiki/wiki/BugReportingGuide">Testing and bug reporting</a></li>
 <li>Code audit (e.g. gui-daemon)</li>
 <li>New features</li>
 <li>Artwork (plymouth themes, KDM themes, installer themes, wallpapers, etc)</li>
