--- a/BugReportingGuide.html
+++ b/BugReportingGuide.html
@@ -13,16 +13,16 @@
 <li>Search the <a href="/wiki/wiki/QubesLists">mailing lists</a> to see if your issue is already discussed - if so, add your comments to the existing thread.</li>
 </ol>
 <ol start="3">
-<li>If your problem seems to be a new one report it:
+<li>If your problem seems to be a new one, report it:
 <ul>
-<li>as a mail - with a clear specific subject like &quot;bug report: &lt;specific description&gt;&quot;</li>
-<li>include steps to reproduce the problem if possible, and relevant log files (if you know);</li>
+<li>as a mail, with a clear specific subject like &quot;bug report: &lt;specific description&gt;&quot;</li>
+<li>include steps to reproduce the problem if possible, and relevant log files (if you know)</li>
 <li>if its a hardware related issue include your <a href="/wiki/wiki/HCL">HCL</a> Support files as well.</li>
 </ul></li>
 </ol>
 <ol start="5">
-<li>Qubes core <a href="/wiki/wiki/QubesDevelopers">developers</a> may ask you additional questions - please do follow up.</li>
+<li>Qubes <a href="/wiki/wiki/QubesDevelopers">developers</a> may ask you additional questions - please do follow up.</li>
 </ol>
 <ol start="6">
-<li>If the issue can be validated as a definite bug then he enters it into the <a href="https://qubes-os.org/trac/report/3">​issue tracker</a>.</li>
+<li>If the issue can be validated as a definite bug then they enters it into the <a href="https://qubes-os.org/trac/report/3">​issue tracker</a>.</li>
 </ol>
