--- a/UserDoc/TorVM.html
+++ b/UserDoc/TorVM.html
@@ -1,3 +1,7 @@
 <p><strong>TEXTError: Failed to load processor -1-1STARTcode-1-1TEXTMarkdown-1-1ENDcode-1-1TEXT-1-1</strong></p>
 <pre><code>No macro or processor named &#39;Markdown&#39; found</code></pre>
+<h2 id="Knownissues:">Known issues:</h2>
+<ul>
+<li><a href="https://groups.google.com/d/msg/qubes-users/fyBVmxIpbSs/R5mxUcIEZAQJ">​Service doesn't start without (even empty) user torrc</a></li>
+</ul>
 <p>Source of this document: <a href="http://git.qubes-os.org/gitweb/?p=marmarek/addons.git;a=blob;f=qubes-tor/README.md">​http://git.qubes-os.org/gitweb/?p=marmarek/addons.git;a=blob;f=qubes-tor/README.md</a></p>
