--- a/HCL.html
+++ b/HCL.html
@@ -114,6 +114,11 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/FyA7_Kzw1WA/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/F-jVh62ANak/s57rqUWTY7kJ">Alex​</a></p>
+<p>Dell Latitude E6430<br /> (Intel HD graphics; Ivy Bridge; i5-3340M, BIOS: A11)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
 <p>OK</p>
