--- a/HCL.html
+++ b/HCL.html
@@ -245,6 +245,14 @@
 <p>?</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
+<p>Supermicro X10SAE<br /> (Haswell; Radeon HD 5700; Xeon E3-1245; BIOS: 1.0)</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">Qubes Fan</a></p>
 <h2 id="Submittingnewresults">Submitting new results</h2>
 <p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results ('HCL Info' - contets of the .txt file) to <a href="/wiki/wiki/QubesLists">the mailing list</a> with the following details included:</p>
 <ul>
