--- a/HCL.html
+++ b/HCL.html
@@ -246,8 +246,9 @@
 <p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
 <p>Supermicro X10SAE<br /> (Haswell; Radeon HD 5700; Xeon E3-1245; BIOS: 1.0)</p>
-<p>?</p>
-<p>?</p>
+<p>X</p>
+<p>X</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
 <p>OK</p>
 <p>OK</p>
 <p>X</p>
