--- a/DevelFaq.html
+++ b/DevelFaq.html
@@ -20,22 +20,17 @@
 <p>See <a href="/wiki/wiki/QubesBuilder">the instruction</a></p>
 <h3 id="Q:HowdoIsubmitapatch">Q: How do I submit a patch?</h3>
 <ol>
-<li>Make all the changes in your working directory, i.e. edit files, move</li>
+<li>Make all the changes in your working directory, i.e. edit files, move them around (you can use 'git mv' for this), etc.</li>
 </ol>
-<p>them around (you can use 'git mv' for this), etc.</p>
 <ol start="2">
-<li>Add the changes and commit them (git add, git commit).</li>
+<li>Add the changes and commit them (git add, git commit). Never mix different changes into one commit! Write a good description of the commit. The first line should contain a short summary, and then, if you feel like more explanations are needed, enter an empty new line, and then start the long, detailed description (optional).</li>
 </ol>
-<p>Never mix different changes into one commit!</p>
-<p>Write a good description of the commit. The first line should contain a short summary, and then, if you feel like more explanations are needed, enter an empty new line, and then start the long, detailed description (optional).</p>
 <ol start="3">
 <li>Test your changes NOW: check if RPMs build fine, etc.</li>
 </ol>
 <ol start="4">
-<li>Create the patch using 'git format-patch'. This has an advantage over</li>
+<li>Create the patch using 'git format-patch'. This has an advantage over 'git diff', because the former will also include your commit message, your name and email, so that *your* name will be used as a commit's author.</li>
 </ol>
-<p>'git diff', because the former will also include your commit message, your name and email, so that *your* name will be used as a commit's author.</p>
 <ol start="5">
-<li>Send your patch to qubes-devel. Start the message subject with the</li>
+<li>Send your patch to qubes-devel. Start the message subject with the '[PATCH]' string.</li>
 </ol>
-<p>'[PATCH]' string.</p>
