--- a/HCL.html
+++ b/HCL.html
@@ -223,6 +223,12 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/uKI-VBtKWxg/uKjsdGNSpSQJ">​Ant</a></p>
+<p>ASRock Z77 Pro4<br /> (Ivy Bridge; Xeon E3-1200 Graphics; i7-3770; BIOS: P1.40)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/lycnE-LcJBo/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/lycnE-LcJBo/0u10xl7AMrIJ">gorka</a></p>
 <p>Dell Precision T3400 Workstation<br /> (NVIDIA Quadro NVS 290; Intel Q6600; BIOS: A09)</p>
 <p>?</p>
 <p>?</p>
