--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -17,5 +17,6 @@
 <h2 id="a2013">2013</h2>
 <ul>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/9e2fb148f140e09a">​Qubes Security Bulletin #6</a></li>
-<li><a href="https://groups.google.com/forum/#!msg/qubes-devel/KqZdbcgkTGU/YaTwNcQhcrgJ">​Qubes Security Bulletin #7</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/KqZdbcgkTGU/YaTwNcQhcrgJ">​Qubes Security Bulletin #7</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/xj9KAW5inQc/YOrhOAQ7HU0J">​Qubes Security Bulletin #8</a></li>
 </ul>
