--- a/HCL.html
+++ b/HCL.html
@@ -187,11 +187,15 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a></p>
-<p>Lenovo Thinkpad x230</p>
+<p>Lenovo Thinkpad x230<br /> (Ivy Bridge; HD Graphics; i5-3320M; BIOS:2.51)</p>
 <p>*</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a></p>
+<p>*</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/hf0vkL3TE7k/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a><br /> <a href="https://groups.google.com/d/msg/qubes-users/hf0vkL3TE7k/VOtrW3wEbtMJ">​mgflax</a></p>
 <p>Toshiba Tecra S11</p>
 <p>OK</p>
 <p>OK</p>
