--- a/NetworkBridgeSupport.html
+++ b/NetworkBridgeSupport.html
@@ -9,4 +9,6 @@
 <p>Now if you really want to work with OSI layer2 / layer 3 tools, that you don't have a secondary network card, or that you want to completely expose services of a given AppVM (at your own risk), a bridged setup may help you.</p>
 <h2 id="QubesmanagerpatchQubesR2B3">Qubes manager patch (Qubes R2B3)</h2>
 <p>The following patches can be applied to the Qubes Manager GUI in order to add an option to easily bridge a VM. Use it at your own risk. If the patch breaks the Qubes Manager, you can try to restore the qubes packages:</p>
-<pre class="wiki"><code># qubes-dom-update reinstall qubes-core-dom0 qubes-manager</code></pre>
+<pre class="wiki"><code># qubes-dom-update qubes-core-dom0 qubes-manager
+# yum reinstall qubes-core-dom0
+# yum reinstall qubes-manager</code></pre>
