--- a/NetworkBridgeSupport.html
+++ b/NetworkBridgeSupport.html
@@ -12,3 +12,10 @@
 <pre class="wiki"><code># qubes-dom-update qubes-core-dom0 qubes-manager
 # yum reinstall qubes-core-dom0
 # yum reinstall qubes-manager</code></pre>
+<p>First, retrieve the attachment of this Wifi article in dom0. Then apply the three patches the following way:</p>
+<pre class="wiki"><code># patch /usr/lib64/python2.7/site-package/qubes/qubes.py &lt; qubes.py-bridge.diff
+# patch /usr/lib64/python2.7/site-package/qubesmanager/settings.py &lt; settings.py-bridge.diff
+# patch /usr/lib64/python2.7/site-package/qubesmanager/ui_settingsdlg.py &lt; ui_settingsdlg.py-bridge.diff</code></pre>
+<p>Finally restart the qubes manager GUI.</p>
+<p>A new option is now available in the AppVM Settings to enable set the NetVM in bridge mode. For a bridged AppVM, you should the select a netvm instead of a firewall vm, enabled the Bridge option and restart your AppVM.</p>
+<h2 id="NetVMpatchQubesR2B3">NetVM patch (Qubes R2B3)</h2>
