--- a/NetworkBridgeSupport.html
+++ b/NetworkBridgeSupport.html
@@ -41,3 +41,6 @@
 -A FORWARD -j DROP</code></pre></li>
 </ul>
 <p>Ensure that the IP addresses used by default in qubes are in the form 10.137.1.* or 10.137.2.* by running ifconfig. Of course, this setup won't work with IPv6.</p>
+<p>Now you need to restart the NetVM and FirewallVM or only iptables in both VMs if you prefer:</p>
+<pre class="wiki"><code># systemctl restart iptables</code></pre>
+<h2 id="CreatetheBridgeVMinsidethecurrentNetVM">Create the Bridge VM inside the current NetVM</h2>
