--- a/UserDoc.html
+++ b/UserDoc.html
@@ -27,6 +27,7 @@
 <li><a href="/wiki/wiki/UserDoc/XFCE">XFCE</a> installation in dom0</li>
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 <li><a href="/wiki/wiki/LinuxHVMTips">Tips for using Linux in HVM</a></li>
+<li><a href="/wiki/wiki/FullScreenMode">Enabling Fullscreen mode for AppVMs</a></li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
