--- a/Donations.html
+++ b/Donations.html
@@ -1,6 +1,7 @@
 <h1 id="DonatingtotheQubesProject">Donating to the Qubes Project</h1>
 <p>The Qubes project is now accepting donations in Bitcoins. You can use the following address to send bitcoins to the project (but you might want to read the short FAQ below first):</p>
 <pre class="wiki"><code>14zockMSKKp5MK6X2cHJ3mQwm9MwYsJ39j</code></pre>
+<p>This address can also be found in a message posted to Qubes mailing list, which can be viewed via Google Groups Web interface over SSL <a href="http://">​here</a>, for double verification. For additional verification, you can verify the digital signature on the message, which should come from Joanna Rutkowska.</p>
 <h2 id="FAQ">FAQ</h2>
 <h3 id="HowareyougoingtospendthedonatedBitcoins">How are you going to spend the donated Bitcoins?</h3>
 <p>Our primary intention is to fund development of additional Qubes features, such as Split GPG (#474), Qubes MIME handlers, USB PV backend, IPv6 routing between VMs, etc. Those additional features, although often very cool and appealing, are being often postponed because we need to focus on the more mainstream features, including the commercial branches for our paying customers.</p>
