--- a/HCL.html
+++ b/HCL.html
@@ -21,6 +21,7 @@
 <li>You <em>can</em> install Qubes onto a USB pendrive or external disk. A fast USB3 pendrive is recommended for this (be sure it is at least 32GB in size), and Qubes works very nice out of it. Just plug in your pendrive before booting into installer, and choose it as a target installation disk. It works nicely, and you can later just plug it to some other computer to boot Qubes elsewhere.</li>
 <li>We don't recommend installing Qubes in a virtual machine!</li>
 <li>There is a problem with supporting keyboard and mouse on Mac, and so Mac hardware is currently unsupported (patches welcomed!)</li>
+<li>How to find a VT-d capable notebook -- see <a href="https://groups.google.com/d/msg/qubes-users/Sz0Nuhi4N0o/ZtpJdoc0OY8J">​here</a>.</li>
 </ul>
 <h2 id="HardwareCompatibilityList">Hardware Compatibility List</h2>
 <p><strong>Device</strong></p>
