--- a/BuildingArchlinuxTemplate.html
+++ b/BuildingArchlinuxTemplate.html
@@ -70,7 +70,10 @@ sudo sed &#39;s:qubes-iptables:qubes_iptables:g&#39; -i /usr/bin/qubes-firewall
 
 sudo sed &#39;s:qubes-netvm-domid:qubes_netvm_domid:g&#39; -i /usr/bin/qubes-netwatcher
 sudo sed &#39;s:qubes-netvm-external-ip:qubes_netvm_external_ip:g&#39; -i /usr/bin/qubes-netwatcher
-sudo sed &#39;s:qubes-vm-updateable:qubes_vm_updateable:g&#39; -i /usr/lib/qubes/qubes_trigger_sync_appmenus.sh</code></pre>
+sudo sed &#39;s:qubes-vm-updateable:qubes_vm_updateable:g&#39; -i /usr/lib/qubes/qubes_trigger_sync_appmenus.sh
+
+sudo sed &#39;s:qubes-vm-type:qubes_vm_type:g&#39; -i /usr/bin/qubes-session
+sudo sed &#39;s:qubes-vm-updateable:qubes_vm_updateable:g&#39; -i /usr/bin/qubes-session</code></pre>
 <p>Do not forgot to:</p>
 <pre class="wiki"><code>umount /mnt/vm</code></pre>
 <h2 id="Thenm-appletnetworkmanagericonfailstostartwhenarchlinuxisdefinedasatemplate-vm:">The nm-applet (network manager icon) fails to start when archlinux is defined as a template-vm:</h2>
