--- a/HCL.html
+++ b/HCL.html
@@ -145,6 +145,12 @@
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/jamRkZJDC0g/KTniY0Y3dioJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
+<p>Dell XPS 13 (L322X)<br /> (i7-3537U; intel HD; Ivy Bridge; BIOS A09)</p>
+<p>*</p>
+<p>OK</p>
+<p>X</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/21kqNBzJLPw/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/21kqNBzJLPw/e74SMRweTMsJ">​Brian J Smith-Sweeney</a></p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
