--- a/UserDoc/TorVM.html
+++ b/UserDoc/TorVM.html
@@ -4,4 +4,4 @@
 <ul>
 <li><a href="https://groups.google.com/d/msg/qubes-users/fyBVmxIpbSs/R5mxUcIEZAQJ">​Service doesn't start without (even empty) user torrc</a></li>
 </ul>
-<p>Source of this document: <a href="http://git.qubes-os.org/gitweb/?p=marmarek/addons.git;a=blob;f=qubes-tor/README.md">​http://git.qubes-os.org/gitweb/?p=marmarek/addons.git;a=blob;f=qubes-tor/README.md</a></p>
+<p>Source of this document: <a href="http://git.qubes-os.org/gitweb/?p=marmarek/qubes-app-linux-tor.git;a=blob;f=README.md">​http://git.qubes-os.org/gitweb/?p=marmarek/qubes-app-linux-tor.git;a=blob;f=README.md</a></p>
