--- a/WikiStart.html
+++ b/WikiStart.html
@@ -1,6 +1,6 @@
 <p><a href="/wiki/wiki/QubesArchitecture"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
 <h1 id="WelcometotheQubesOSProject">Welcome to the Qubes OS Project</h1>
-<p>Qubes is an open source operating system designed to provide strong security for desktop computing. Qubes is based on Xen, X Window System, and Linux, and can run most Linux applications and utilize most of the Linux drivers. Qubes <strong>Release 1</strong> has been released in September 2012. Qubes <strong>Release 2</strong> is currently in the works, and Beta 1 has already been released. Qubes 2 supports Windows-based AppVMs.</p>
+<p>Qubes is an open-source operating system designed to provide strong security for desktop computing. Qubes is based on Xen, the X Window System, and Linux, and can run most Linux applications and utilize most of the Linux drivers. Qubes <strong>Release 1</strong> was released in September 2012. Qubes <strong>Release 2</strong> is currently in the works, with Beta 2 having been released in February 2013. Qubes supports Windows-based AppVMs beginning with Release 2.</p>
 <ul>
 <li><a href="/wiki/wiki/QubesScreenshots">Screenshots</a></li>
 <li><a href="/wiki/wiki/QubesArchitecture">Architecture Overview</a></li>
